<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_your_task">Add Your Task !</string>
    <string name="task_title">task_title</string>
    <string name="description">description</string>
    <string name="task_date">task_date</string>
    <string name="add_task">Add Task</string>
    <string name="select_time">Select Time</string>
    <string name="done">done\n</string>
</resources>