<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.todo.ui.home.activites.addTaskActivity.AddTaskViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_your_task"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                />
        </androidx.cardview.widget.CardView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/task_title"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:text="@={vm.taskTitleLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:lines="5"
                android:maxLines="5"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:text="@={vm.taskDescriptionLiveData}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12sp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select_time"
                android:textSize="18sp"
                android:text="@={vm.taskTimeLiveData}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_task_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:textAllCaps="false"
            app:cornerRadius="12dp"
            app:elevation="0dp"
            android:paddingVertical="10dp"
            android:backgroundTint="@color/baby_blue"
            android:textColor="@color/white"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</layout>